Fix group tables overflow when long team name

--- a/app/javascript/src/styles/_team.scss
+++ b/app/javascript/src/styles/_team.scss
@@ -2,7 +2,8 @@
 @import 'shared';
 
 .team {
-  white-space: nowrap;
+  display: flex;
+  align-items: center;
 
   &--selected {
     color: $green;
